# klever_keys_java

./: CMakeLists.txt  KleverKeys.java  README.md  cpp_klever_keys.cpp  jni_klever_keys.c  klever_keys.c
cpp/: HideString.h  KleverKeys.cpp  KleverKeys.h
cpp/easy_encrypt/: EasyEncrypt.cpp
include/: klever_keys.h
